First go at basic content for OII.

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 markdown: kramdown
-permalink: pretty
-title: Content as Code
-tagline: Developing workflows and technology to improve content re-use and maintainability.
-description: Developing workflows and technology to improve content re-use and maintainability.
-url: 'http://contentascode.github.io'
-baseurl: /docsmith-init
+permalink: none
+title: Open Integrity
+tagline: Measuring Security and Privacy Best Practice Adoption
+description: Measuring Security and Privacy Best Practice Adoption
+url: 'http://openintegrity.github.io'
+baseurl: /openintegrity.org
 author:
   name: Your Name
   url: 'https://twitter.com/yourtwitter'
@@ -32,7 +32,7 @@ redcarpet:
     - smart
 github:
   current_branch: master
-  repository_url: 'https://github.com/contentascode/docsmith-init'
+  repository_url: 'https://github.com/openintegrity/openintegrity.org'
 gems:
   - jekyll-sitemap
   - jekyll-gist
