--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "clean": "rm -rf $CONFIG_REPO && rm _branch.yml",
     "build": "jekyll build --config _config.yml,_branch.yml -d $CONFIG_REPO",
+    "watch": "jekyll serve -w -d $CONFIG_REPO",
     "test": "npm run build && echo \"Do some validations...\" && npm run test-links",
     "test-links": "pm2 -s stop hs || true && pm2 -s delete hs || true && pm2 -f start `which hs` -- -p 8080 . && blc -s -r --input http://127.0.0.1:8080/$CONFIG_REPO | tee /dev/tty | grep -z '. 0 broken\\.[[:space:]]\\+Elapsed'",
     "deploy": "npm run deploy-push",
@@ -9,19 +10,19 @@
     "prebuild": "if [ $TRAVIS_PULL_REQUEST -eq 'true'] ; then TRAVIS_BRANCH=$TRAVIS_COMMIT ; fi && echo \"github:\\n  current_branch: $TRAVIS_BRANCH\" > _branch.yml\n",
     "postbuild": "rm _branch.yml"
   },
-  "name": "docsmith-init",
+  "name": "openintegrity.org",
   "version": "0.0.1",
-  "description": "Empty project for docsmith",
+  "description": "Open Integrity Initiative Website",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/contentascode/docsmith-init.git"
+    "url": "git+https://github.com/openintegrity/openintegrity.org.git"
   },
   "author": "Jun Matsushita",
   "license": "AGPL-3.0",
   "bugs": {
-    "url": "https://github.com/contentascode/docsmith-init/issues"
+    "url": "https://github.com/openintegrity/openintegrity.org/issues"
   },
-  "homepage": "https://github.com/contentascode/docsmith-init#readme",
+  "homepage": "https://openintegrity.org",
   "keywords": []
 }
